Fixed unsane attribute "vertical-align: right" to "text-align:right", also corrected several misspelled attributes.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@17246 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -371,7 +371,7 @@ a.users:hover {
 	font-weight: bold;
 	color: #000000;
 	width: 16em;
-	vertical-align: right;
+	text-align: right;
 	padding: 0.2em 0.5em 0.2em;
 	background-color: #FFFFFF;
   	border-top: 6px solid #FF801A }
@@ -381,7 +381,7 @@ a.users:hover {
 	font-weight: bold;
 	color: #000000;
 	width: 16em;
-	vertical-align: right;
+	text-align: right;
 	padding: 0.2em 0.5em 0.2em }
 
 .rows {
@@ -502,7 +502,7 @@ a.path:hover {
 /* ###### treelevel ###### */
 
 .lbLevel0 {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
 	background-color: #EE8628;
 	BORDER-LEFT: #FFFFFF 1px solid;
@@ -510,7 +510,7 @@ a.path:hover {
 	BORDER-TOP: #FFFFFF 1px solid }
 
 .lbLevel1 {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
 	background-color: #F19E53;
 	BORDER-LEFT: #FFFFFF 1px solid;
@@ -518,25 +518,25 @@ a.path:hover {
 	BORDER-TOP: #FFFFFF 1px solid }
 
 .lbLevel2 {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
   	background-color: #F5B67E;
 	BORDER-TOP: #FFFFFF 1px solid }
 
 .lbLevel3 {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
 	background-color: #F8CFA9;
 	BORDER-TOP: #FFFFFF 1px solid }
 
 .lbLevel4 {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
   	background-color: #FBE1C9;
 	BORDER-TOP: #FFFFFF 1px solid }
 
 .loLevel {
-	heigth: 20px;
+	height: 20px;
 	padding: 0.2em 0em 0.2em 0em;
   	background-color: #FEEEE0;
 	BORDER-TOP: #FFFFFF 1px solid }
